name:                base85
version:             0.1.0.0
synopsis:            Translate bytes to base85 and back.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Robin Kåveland Hansen
maintainer:          kaaveland@gmail.com
-- copyright:           
category:            Codec
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Codec.Base85, Codec.Base85.Internal
  hs-source-dirs:      src
  build-depends:       base ==4.5.*,
                       bytestring,
                       vector
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

test-suite tests
  main-is:             RunTests.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  hs-source-dirs:      tests
  build-depends:       base ==4.5.*,
                       bytestring,
                       vector,
                       base85,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2,
                       QuickCheck,
                       HUnit

